added new changes to html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ a {
 /* paragraph styling */
 p {
     font-size: 15px;
-    font-weight: bold;
+    color:white;
 }
 /* main background image */
 .hero {
