New changes to HTML and CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,8 @@ a {
 /* paragraph styling */
 p {
     font-size: 15px;
-    color:white;
+    color: #ffffff;
+    font-weight: bolder;
 }
 /* main background image */
 .hero {
